// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image.md with options: {"type":{"image":false}}: image.md 1`] = `
![说明a说明1](http://example.com/链接a链接1 "标题a标题1")
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
![说明a说明1](http://example.com/链接a链接1 "标题a标题1")

`;

exports[`image.md with options: {"type":{"imageReference":false}}: image.md 1`] = `
![说明a说明1](http://example.com/链接a链接1 "标题a标题1")
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
![说明 a 说明 1](http://example.com/链接a链接1 "标题 a 标题 1")

`;

exports[`image.md with options: undefined: image.md 1`] = `
![说明a说明1](http://example.com/链接a链接1 "标题a标题1")
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
![说明 a 说明 1](http://example.com/链接a链接1 "标题 a 标题 1")

`;
